# Multilayer-Perceptron-CPP-QT

./: .gitignore  CMakeLists.txt  README.md  main.cc
datasets/emnist-letters/: emnist-letters-train.csv
src/: CMakeLists.txt  Makefile  main.cc
src/controller/: customgraphicsview.cc  drawarea.cc  drawarea.h  drawareaview.cc  drawareaview.h  mainwindow.cc  mainwindow.h  modeltrainer.cc  modeltrainer.h  trainingdialog.cc  trainingdialog.h
src/forms/: mainwindow.ui  trainingdialog.ui
src/lib/: matrix.cc  matrix.h
src/model/: 20_epoch.txt  CMakeLists.txt  Makefile  activation_function.h  dataset.cc  dataset.h  dataset_parser.cc  dataset_parser.h  imagetransformer.cc  imagetransformer.h  iperceptron.h  matrix.txt  matrix_out.txt  matrix_perceptron.cc  matrix_perceptron.h  parser.cc  parser.h  perceptron_interface.h  picture.cc  picture.h  tmp_main.cc
src/model/activation_function/: activation_function_interface.cc  activation_function_interface.h  i_activation_function.h  sigmoid.cc  sigmoid.h
src/model/data/: dataset.cc  dataset.h  mapping.cc  mapping.h  picture.cc  picture.h
src/model/parser/: parser.cc  parser.h
src/model/perceptron/: graph_perceptron.cc  graph_perceptron.h  i_perceptron.h  layer.cc  layer.h  matrix_perceptron.cc  matrix_perceptron.h  neuron.cc  neuron.h
src/view/: customgraphicsview.cc  customgraphicsview.h  histogramplot.cc  histogramplot.h
src/view/drawarea/: drawarea.cc  drawarea.h
src/view/forms/: mainwindow.ui
src/view/mainwindow/: mainwindow.cc  mainwindow.h
